# 4DVisualization

./: Application.cpp  CMakeLists.txt  main.cpp
config/: Config.h
core/: AbstractRegularShape.cpp  OneHundredAndTwentyCell.cpp  Pentachoron.cpp  SixHundredCell.cpp  SixteenCell.cpp  Tesseract.cpp  TwentyFourCell.cpp
debug/: DebugUtils.cpp  DebugUtils.h
gui/: Window.cpp
io/: FileReadUtils.cpp  FileReadUtils.h  Input.cpp  Input.h
modules/: AbstractRegularShape.h  Application.h  TransformationManager.h  Window.h
polytopeData/120cell/: 120-cell_correspondences.txt  120-cell_vertices.txt
polytopeData/24cell/: 24-cell_correspondences.txt  24-cell_vertices.txt
polytopeData/600cell/: 600-cell_correspondences.txt  600-cell_vertices.txt
shapes/: OneHundredAndTwentyCell.h  Pentachoron.h  SixHundredCell.h  SixteenCell.h  Tesseract.h  TwentyFourCell.h
transforms/: TransformationManager.cpp  TransformationUtils.cpp  TransformationUtils.h
